<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/activity_resumo_pacote_banner"
        android:layout_width="0dp"
        android:layout_height="140dp"
        android:contentDescription="@string/descricao_imagem_pacote"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:srcCompat="@drawable/sao_paulo_sp" />

    <TextView
        android:id="@+id/activity_resumo_pacote_local"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_resumo_pacote_banner"
        app:layout_constraintVertical_bias="0.0"
        tools:text="São Paulo" />

    <TextView
        android:id="@+id/activity_resumo_pacote_dias"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/activity_resumo_pacote_local"
        app:layout_constraintTop_toBottomOf="@+id/activity_resumo_pacote_local"
        tools:text="2 dias" />

    <TextView
        android:id="@+id/activity_resumo_pacote_periodo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@id/activity_resumo_pacote_preco"
        app:layout_constraintStart_toStartOf="@+id/activity_resumo_pacote_dias"
        app:layout_constraintTop_toBottomOf="@+id/activity_resumo_pacote_dias"
        tools:text="08 de dezembro - 10 de dezembro de 2021" />

    <TextView
        android:id="@+id/activity_resumo_pacote_preco"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:textAlignment="textEnd"
        android:textColor="@android:color/holo_green_light"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/activity_resumo_pacote_periodo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/activity_resumo_pacote_periodo"
        tools:ignore="TextContrastCheck"
        tools:text="R$ 243,99" />

    <TextView
        android:id="@+id/activity_resumo_pacote_label_preco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_preco_final"
        app:layout_constraintBottom_toTopOf="@+id/activity_resumo_pacote_preco"
        app:layout_constraintEnd_toEndOf="@+id/activity_resumo_pacote_preco" />

    <android.widget.Button
        android:id="@+id/activity_resumo_pacote_botao_pagto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/botao_redondo_laranja"
        android:text="@string/botao_realizar_pagamento"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>